test/e2e/features/apikeyauth/testdata/api-key-auth-override.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route-override
  namespace: default
spec:
  hostnames:
    - httpbin
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /status/200
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /get
      name: rule1
---
apiVersion: v1
kind: Secret
metadata:
  name: api-keys-secret
  namespace: default
type: Opaque
stringData:
  client1: k-123
  client2: k-456
---
apiVersion: v1
kind: Secret
metadata:
  name: api-keys-secret-route
  namespace: default
type: Opaque
stringData:
  client3: k-789
  client4: k-999
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: api-key-auth-gateway
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw
  apiKeyAuth:
    keySources:
    - header: "api-key"
    forwardCredential: false
    secretRef:
      name: api-keys-secret
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: api-key-auth-route-override
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-route-override
      sectionName: rule1
  apiKeyAuth:
    keySources:
    - header: "api-key"
    forwardCredential: false
    secretRef:
      name: api-keys-secret-route
