test/e2e/features/apikeyauth/testdata/api-key-auth-secret-update.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route-secret-update
  namespace: default
spec:
  hostnames:
    - httpbin
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /status/200
---
apiVersion: v1
kind: Secret
metadata:
  name: api-keys-secret-update
  namespace: default
type: Opaque
stringData:
  client1: k-123
  client2: k-456
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: api-key-auth-policy-secret-update
spec:
  targetRefs:
    - name: httpbin-route-secret-update
      kind: HTTPRoute
      group: gateway.networking.k8s.io
  apiKeyAuth:
    keySources:
    - header: "api-key"
    forwardCredential: true
    secretRef:
      name: api-keys-secret-update
